# KRI-Kernel-Review-Intelligence

./: .gitignore  README.md  SPEC.md  pyproject.toml
.kri/ledger/: promotions.jsonl  session.jsonl
docs/: ARCHITECTURE_AUDIT_2026-07-21.md  AUTONOMOUS_EXECUTION_MODEL.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_SYSTEM_UNDERSTANDING.md  BENCHMARK_HISTORY.md  BENCHMARK_ORACLE_LIMITATIONS.md  BLUEPRINT_RECONCILIATION.md  FP_CLASSIFICATION_2026-07-16.md  KERNEL_TREE_REFRESH.md  KERNEL_TREE_USAGE_ANALYSIS.md  MAINTAINER_STYLE_AUDIT_2026-07-21.md  MAINTAINER_STYLE_CORPUS_2026-07-21.md  SOURCE_AUTHORITY_ORDER.md  WP_S1B_IMPLEMENTATION_READINESS_REVIEW_2026-07-22.md  WP_S1B_SHADOW_MODE_REVIEW_2026-07-21.md  WP_S1_SERIES_AWARE_REASONING_SPEC_2026-07-21.md  WP_S2A_CROSS_VERSION_REVIEW_HISTORY_SPEC_2026-07-24.md
kri/: __init__.py
kri/benchmark/: __init__.py  runner.py
kri/common/: __init__.py  diff_utils.py  interfaces.py  models.py
kri/confidence_engine/: __init__.py  engine.py
kri/evidence_engine/: __init__.py  cross_patch_resolver.py  engine.py
scripts/: replay_rubikpi_wp_s1a.py
tests/: conftest.py  test_alternative_precedents.py  test_alternative_recommendation.py  test_applicability_gate.py  test_asoc_signal_specificity.py  test_benchmark_regression.py  test_checkpatch_integration.py  test_cross_patch_resolver.py  test_engine_repo_manager_wiring.py  test_frozen_core.py  test_governance.py  test_hunk_citation.py  test_integration.py  test_knowledge_graph.py  test_lore_manager.py  test_maintainer_template.py  test_mbox.py  test_patch_manager.py  test_reducer_diagnostics_engine.py  test_repo_manager.py  test_sanitize.py  test_scaffolding.py  test_seeded_precedents_are_real_commits.py  test_series_context.py  test_series_ordering.py  test_series_reducer_b1.py  test_series_reducer_b12_determinism.py  test_series_reducer_b14_default_flags.py  test_series_reducer_b2_schema.py  test_series_reducer_b3_actions_surface.py  test_series_reducer_b3_engine_flags.py  test_series_reducer_b3_env.py  test_series_reducer_b4_r1.py  test_series_reducer_b4_r1_integration.py  test_series_reducer_b4_r8.py  test_series_reducer_b5_r3_r4.py  test_series_reducer_b7_r5_r6_r7.py  test_series_reducer_corpus.py  test_series_reducer_diagnostics.py  test_series_review_context.py  (+5 more)
(+60 files in other folders)
