[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kri"
version = "0.1.0"
description = "Kernel Review Intelligence - evidence-backed Linux kernel patch review simulation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "KRI Team" }]

# Pinned-ish minimum versions. The runtime is domain-agnostic; no ASoC/audio deps here.
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "networkx>=3.2,<4.0",     # MVP knowledge-graph backend; documented Neo4j migration path in SPEC.md
    "GitPython>=3.1.43,<4.0",
    "requests>=2.31,<3.0",
    "PyYAML>=6.0,<7.0",       # DKP manifest + pattern library parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "types-networkx>=3.2,<4.0",
    "httpx>=0.27,<1.0",       # FastAPI TestClient backend for web/ tests
]

# Domain Knowledge Packages register here. The Generic Runtime discovers DKPs
# via this entry-point group at startup and NEVER imports them directly.
[project.entry-points."kri.dkp"]
asoc = "kri.packages.asoc.plugin:AsocDomainKnowledgePackage"

[tool.setuptools.packages.find]
where = ["."]
include = ["kri*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# strict_xfail = True forces a CANONICAL_PRECEDENTS xfail entry to fail CI
# the moment its hash starts passing cat-file -e -- surfacing the "should
# we remove the xfail now?" decision immediately rather than letting XPASS
# results silently accumulate. See WP-9.2a-polish-v2 closeout notes for the
# fabrication-avoidance rationale.
xfail_strict = true
filterwarnings = [
    # starlette's TestClient nags about an httpx2 package that does not exist yet.
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]
